fixed the text overflow ellipsis problem

--- a/style.css
+++ b/style.css
@@ -133,22 +133,20 @@ svg {
   color: white;
   list-style: none;
   border-radius: 7.5px;
-  padding-left: 0.25rem;
   white-space: nowrap;
   overflow-x: hidden;
   cursor: pointer;
-  margin-bottom: 0.2rem;
-  margin-right: 0.3rem;
-  width: 100%;
+  padding-left: 0.3rem;
+  width: 210px;
   min-height: 27.2px;
-  transition: all 0.5s ease;
+  margin-bottom: 0.2rem;
+  text-overflow: ellipsis;
 }
-.note--active,
-.note-title:hover {
+.note-title:hover,
+.note--active {
   background-color: rgba(56, 36, 62, 1);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-
 .notes-container {
   background-color: rgb(19, 8, 19);
   position: relative;
